[gd_scene load_steps=4 format=3 uid="uid://d27casi5xthrp"]

[ext_resource type="PackedScene" uid="uid://b5olb3s4jspme" path="res://scenes/ui/sound_button.tscn" id="1_ekdao"]
[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_gc5qv"]
[ext_resource type="TileSet" uid="uid://3xahltxyltkv" path="res://resources/background_tile_set.tres" id="2_jub33"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_gc5qv")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_jub33")
format = 2
layer_0/tile_data = PackedInt32Array(589834, 131073, 1, 655370, 131073, 2, 720906, 1, 3, 589835, 65537, 1, 655371, 65537, 2, 720907, 65537, 3, 589836, 131073, 1, 655372, 131073, 2, 720908, 131073, 3, 589837, 327681, 1, 655373, 327681, 2, 720909, 327681, 3, 589838, 262145, 1, 655374, 262145, 2, 720910, 262145, 3, 589839, 65537, 1, 655375, 65537, 2, 720911, 1, 3, 589828, 262145, 1, 655364, 262145, 2, 720900, 262145, 3, 589829, 327681, 1, 655365, 327681, 2, 720901, 327681, 3, 589830, 131073, 1, 655366, 131073, 2, 720902, 131073, 3, 589831, 196609, 1, 655367, 196609, 2, 720903, 196609, 3, 589832, 262145, 1, 655368, 262145, 2, 720904, 262145, 3, 589833, 65537, 1, 655369, 65537, 2, 720905, 327681, 3, 655358, 327681, 1, 720894, 327681, 2, 786430, 327681, 3, 655359, 65537, 1, 720895, 65537, 2, 786431, 65537, 3, 589824, 131073, 1, 655360, 131073, 2, 720896, 131073, 3, 589825, 196609, 1, 655361, 196609, 2, 720897, 196609, 3, 589826, 262145, 1, 655362, 262145, 2, 720898, 262145, 3, 589827, 327681, 1, 655363, 327681, 2, 720899, 327681, 3, 589840, 131073, 1, 655376, 131073, 2, 720912, 65537, 3, 589841, 131073, 1, 655377, 131073, 2, 720913, 131073, 3, 589842, 196609, 1, 655378, 196609, 2, 720914, 196609, 3, 589843, 262145, 1, 655379, 262145, 2, 720915, 262145, 3, 589844, 327681, 1, 655380, 327681, 2, 720916, 327681, 3, 589845, 1, 1, 655381, 1, 2, 720917, 1, 3, 589846, 65537, 1, 655382, 65537, 2, 720918, 65537, 3, 589847, 131073, 1, 655383, 131073, 2, 720919, 131073, 3, 589848, 196609, 1, 655384, 196609, 2, 720920, 196609, 3, 589849, 262145, 1, 655385, 262145, 2, 720921, 262145, 3, 589850, 327681, 1, 655386, 327681, 2, 720922, 327681, 3, 589851, 1, 1, 655387, 1, 2, 720923, 1, 3, 589852, 65537, 1, 655388, 65537, 2, 720924, 65537, 3, 589853, 131073, 1, 655389, 131073, 2, 720925, 131073, 3, 589854, 196609, 1, 655390, 196609, 2, 720926, 196609, 3, 589855, 327681, 1, 655391, 327681, 2, 720927, 327681, 3, 589856, 327681, 1, 655392, 327681, 2, 720928, 327681, 3, 589857, 1, 1, 655393, 1, 2, 720929, 1, 3, 589858, 65537, 1, 655394, 65537, 2, 720930, 65537, 3, 589859, 131073, 1, 655395, 131073, 2, 720931, 131073, 3, 589860, 65537, 1, 655396, 65537, 2, 720932, 196609, 3, 589861, 131073, 1, 655397, 131073, 2, 720933, 262145, 3, 589862, 327681, 1, 655398, 327681, 2, 720934, 327681, 3, 589863, 1, 1, 655399, 1, 2, 720935, 1, 3, 589864, 65537, 1, 655400, 65537, 2, 720936, 65537, 3, 589865, 131073, 1, 655401, 131073, 2, 720937, 131073, 3, 851966, 1, 3, 851967, 65537, 3, 786432, 131073, 3, 786433, 196609, 3, 786434, 262145, 3, 786435, 327681, 3, 917502, 1, 3, 917503, 65537, 3, 851968, 131073, 3, 851969, 196609, 3, 851970, 262145, 3, 851971, 327681, 3, 983038, 1, 3, 983039, 65537, 3, 917504, 131073, 3, 917505, 196609, 3, 917506, 262145, 3, 917507, 327681, 3, 1048574, 1, 3, 1048575, 65537, 3, 983040, 131073, 3, 983041, 196609, 3, 983042, 262145, 3, 983043, 327681, 3, 1114110, 1, 3, 1114111, 65537, 3, 1048576, 131073, 3, 1048577, 196609, 3, 1048578, 262145, 3, 1048579, 327681, 3, 1179646, 1, 3, 1179647, 65537, 3, 1114112, 131073, 3, 1114113, 196609, 3, 1114114, 262145, 3, 1114115, 327681, 3, 1245182, 1, 3, 1245183, 65537, 3, 1179648, 131073, 3, 1179649, 196609, 3, 1179650, 262145, 3, 1179651, 327681, 3, 1310718, 1, 3, 1310719, 65537, 3, 1245184, 131073, 3, 1245185, 196609, 3, 1245186, 262145, 3, 1245187, 327681, 3, 1376254, 1, 3, 1376255, 65537, 3, 1310720, 131073, 3, 1310721, 196609, 3, 1310722, 262145, 3, 1310723, 327681, 3, 1441790, 1, 3, 1441791, 65537, 3, 1376256, 131073, 3, 1376257, 196609, 3, 1376258, 262145, 3, 1376259, 327681, 3, 1507326, 1, 3, 1507327, 65537, 3, 1441792, 131073, 3, 1441793, 196609, 3, 1441794, 262145, 3, 1441795, 327681, 3, 1572862, 1, 3, 1572863, 65537, 3, 1507328, 131073, 3, 1507329, 196609, 3, 1507330, 262145, 3, 1507331, 327681, 3, 1638398, 1, 3, 1638399, 65537, 3, 1572864, 131073, 3, 1572865, 196609, 3, 1572866, 262145, 3, 1572867, 327681, 3, 786436, 1, 3, 786437, 65537, 3, 786438, 131073, 3, 786439, 196609, 3, 786440, 262145, 3, 786441, 327681, 3, 851972, 1, 3, 851973, 65537, 3, 851974, 131073, 3, 851975, 196609, 3, 851976, 262145, 3, 851977, 327681, 3, 917508, 1, 3, 917509, 65537, 3, 917510, 131073, 3, 917511, 196609, 3, 917512, 262145, 3, 917513, 327681, 3, 983044, 1, 3, 983045, 65537, 3, 983046, 131073, 3, 983047, 196609, 3, 983048, 262145, 3, 983049, 327681, 3, 1048580, 1, 3, 1048581, 65537, 3, 1048582, 131073, 3, 1048583, 196609, 3, 1048584, 262145, 3, 1048585, 327681, 3, 1114116, 1, 3, 1114117, 65537, 3, 1114118, 131073, 3, 1114119, 196609, 3, 1114120, 262145, 3, 1114121, 327681, 3, 1179652, 1, 3, 1179653, 65537, 3, 1179654, 131073, 3, 1179655, 196609, 3, 1179656, 262145, 3, 1179657, 327681, 3, 1245188, 1, 3, 1245189, 65537, 3, 1245190, 131073, 3, 1245191, 196609, 3, 1245192, 262145, 3, 1245193, 327681, 3, 1310724, 1, 3, 1310725, 65537, 3, 1310726, 131073, 3, 1310727, 196609, 3, 1310728, 262145, 3, 1310729, 327681, 3, 1376260, 1, 3, 1376261, 65537, 3, 1376262, 131073, 3, 1376263, 196609, 3, 1376264, 262145, 3, 1376265, 327681, 3, 1441796, 1, 3, 1441797, 65537, 3, 1441798, 131073, 3, 1441799, 196609, 3, 1441800, 262145, 3, 1441801, 327681, 3, 1507332, 1, 3, 1507333, 65537, 3, 1507334, 131073, 3, 1507335, 196609, 3, 1507336, 262145, 3, 1507337, 327681, 3, 1572868, 1, 3, 1572869, 65537, 3, 1572870, 131073, 3, 1572871, 196609, 3, 1572872, 262145, 3, 1572873, 327681, 3, 786442, 1, 3, 786443, 65537, 3, 786444, 131073, 3, 786445, 196609, 3, 786446, 262145, 3, 786447, 327681, 3, 851978, 1, 3, 851979, 65537, 3, 851980, 131073, 3, 851981, 196609, 3, 851982, 262145, 3, 851983, 327681, 3, 917514, 1, 3, 917515, 65537, 3, 917516, 131073, 3, 917517, 196609, 3, 917518, 262145, 3, 917519, 327681, 3, 983050, 1, 3, 983051, 65537, 3, 983052, 131073, 3, 983053, 196609, 3, 983054, 262145, 3, 983055, 327681, 3, 1048586, 1, 3, 1048587, 65537, 3, 1048588, 131073, 3, 1048589, 196609, 3, 1048590, 262145, 3, 1048591, 327681, 3, 1114122, 1, 3, 1114123, 65537, 3, 1114124, 131073, 3, 1114125, 196609, 3, 1114126, 262145, 3, 1114127, 327681, 3, 1179658, 1, 3, 1179659, 65537, 3, 1179660, 131073, 3, 1179661, 196609, 3, 1179662, 262145, 3, 1179663, 327681, 3, 1245194, 1, 3, 1245195, 65537, 3, 1245196, 131073, 3, 1245197, 196609, 3, 1245198, 262145, 3, 1245199, 327681, 3, 1310730, 1, 3, 1310731, 65537, 3, 1310732, 131073, 3, 1310733, 196609, 3, 1310734, 262145, 3, 1310735, 327681, 3, 1376266, 1, 3, 1376267, 65537, 3, 1376268, 131073, 3, 1376269, 196609, 3, 1376270, 262145, 3, 1376271, 327681, 3, 1441802, 1, 3, 1441803, 65537, 3, 1441804, 131073, 3, 1441805, 196609, 3, 1441806, 262145, 3, 1441807, 327681, 3, 1507338, 1, 3, 1507339, 65537, 3, 1507340, 131073, 3, 1507341, 196609, 3, 1507342, 262145, 3, 1507343, 327681, 3, 1572874, 1, 3, 1572875, 65537, 3, 1572876, 131073, 3, 1572877, 196609, 3, 1572878, 262145, 3, 1572879, 327681, 3, 786448, 1, 3, 786449, 65537, 3, 786450, 131073, 3, 786451, 196609, 3, 786452, 262145, 3, 786453, 327681, 3, 851984, 1, 3, 851985, 65537, 3, 851986, 131073, 3, 851987, 196609, 3, 851988, 262145, 3, 851989, 327681, 3, 917520, 1, 3, 917521, 65537, 3, 917522, 131073, 3, 917523, 196609, 3, 917524, 262145, 3, 917525, 327681, 3, 983056, 1, 3, 983057, 65537, 3, 983058, 131073, 3, 983059, 196609, 3, 983060, 262145, 3, 983061, 327681, 3, 1048592, 1, 3, 1048593, 65537, 3, 1048594, 131073, 3, 1048595, 196609, 3, 1048596, 262145, 3, 1048597, 327681, 3, 1114128, 1, 3, 1114129, 65537, 3, 1114130, 131073, 3, 1114131, 196609, 3, 1114132, 262145, 3, 1114133, 327681, 3, 1179664, 1, 3, 1179665, 65537, 3, 1179666, 131073, 3, 1179667, 196609, 3, 1179668, 262145, 3, 1179669, 327681, 3, 1245200, 1, 3, 1245201, 65537, 3, 1245202, 131073, 3, 1245203, 196609, 3, 1245204, 262145, 3, 1245205, 327681, 3, 1310736, 1, 3, 1310737, 65537, 3, 1310738, 131073, 3, 1310739, 196609, 3, 1310740, 262145, 3, 1310741, 327681, 3, 1376272, 1, 3, 1376273, 65537, 3, 1376274, 131073, 3, 1376275, 196609, 3, 1376276, 262145, 3, 1376277, 327681, 3, 1441808, 1, 3, 1441809, 65537, 3, 1441810, 131073, 3, 1441811, 196609, 3, 1441812, 262145, 3, 1441813, 327681, 3, 1507344, 1, 3, 1507345, 65537, 3, 1507346, 131073, 3, 1507347, 196609, 3, 1507348, 262145, 3, 1507349, 327681, 3, 1572880, 1, 3, 1572881, 65537, 3, 1572882, 131073, 3, 1572883, 196609, 3, 1572884, 262145, 3, 1572885, 327681, 3, 786454, 1, 3, 786455, 65537, 3, 786456, 131073, 3, 786457, 196609, 3, 786458, 262145, 3, 786459, 327681, 3, 851990, 1, 3, 851991, 65537, 3, 851992, 131073, 3, 851993, 196609, 3, 851994, 262145, 3, 851995, 327681, 3, 917526, 1, 3, 917527, 65537, 3, 917528, 131073, 3, 917529, 196609, 3, 917530, 262145, 3, 917531, 327681, 3, 983062, 1, 3, 983063, 65537, 3, 983064, 131073, 3, 983065, 196609, 3, 983066, 262145, 3, 983067, 327681, 3, 1048598, 1, 3, 1048599, 65537, 3, 1048600, 131073, 3, 1048601, 196609, 3, 1048602, 262145, 3, 1048603, 327681, 3, 1114134, 1, 3, 1114135, 65537, 3, 1114136, 131073, 3, 1114137, 196609, 3, 1114138, 262145, 3, 1114139, 327681, 3, 1179670, 1, 3, 1179671, 65537, 3, 1179672, 131073, 3, 1179673, 196609, 3, 1179674, 262145, 3, 1179675, 327681, 3, 1245206, 1, 3, 1245207, 65537, 3, 1245208, 131073, 3, 1245209, 196609, 3, 1245210, 262145, 3, 1245211, 327681, 3, 1310742, 1, 3, 1310743, 65537, 3, 1310744, 131073, 3, 1310745, 196609, 3, 1310746, 262145, 3, 1310747, 327681, 3, 1376278, 1, 3, 1376279, 65537, 3, 1376280, 131073, 3, 1376281, 196609, 3, 1376282, 262145, 3, 1376283, 327681, 3, 1441814, 1, 3, 1441815, 65537, 3, 1441816, 131073, 3, 1441817, 196609, 3, 1441818, 262145, 3, 1441819, 327681, 3, 1507350, 1, 3, 1507351, 65537, 3, 1507352, 131073, 3, 1507353, 196609, 3, 1507354, 262145, 3, 1507355, 327681, 3, 1572886, 1, 3, 1572887, 65537, 3, 1572888, 131073, 3, 1572889, 196609, 3, 1572890, 262145, 3, 1572891, 327681, 3, 786460, 1, 3, 786461, 65537, 3, 786462, 131073, 3, 786463, 196609, 3, 786464, 262145, 3, 786465, 327681, 3, 851996, 1, 3, 851997, 65537, 3, 851998, 131073, 3, 851999, 196609, 3, 852000, 262145, 3, 852001, 327681, 3, 917532, 1, 3, 917533, 65537, 3, 917534, 131073, 3, 917535, 196609, 3, 917536, 262145, 3, 917537, 327681, 3, 983068, 1, 3, 983069, 65537, 3, 983070, 131073, 3, 983071, 196609, 3, 983072, 262145, 3, 983073, 327681, 3, 1048604, 1, 3, 1048605, 65537, 3, 1048606, 131073, 3, 1048607, 196609, 3, 1048608, 262145, 3, 1048609, 327681, 3, 1114140, 1, 3, 1114141, 65537, 3, 1114142, 131073, 3, 1114143, 196609, 3, 1114144, 262145, 3, 1114145, 327681, 3, 1179676, 1, 3, 1179677, 65537, 3, 1179678, 131073, 3, 1179679, 196609, 3, 1179680, 262145, 3, 1179681, 327681, 3, 1245212, 1, 3, 1245213, 65537, 3, 1245214, 131073, 3, 1245215, 196609, 3, 1245216, 262145, 3, 1245217, 327681, 3, 1310748, 1, 3, 1310749, 65537, 3, 1310750, 131073, 3, 1310751, 196609, 3, 1310752, 262145, 3, 1310753, 327681, 3, 1376284, 1, 3, 1376285, 65537, 3, 1376286, 131073, 3, 1376287, 196609, 3, 1376288, 262145, 3, 1376289, 327681, 3, 1441820, 1, 3, 1441821, 65537, 3, 1441822, 131073, 3, 1441823, 196609, 3, 1441824, 262145, 3, 1441825, 327681, 3, 1507356, 1, 3, 1507357, 65537, 3, 1507358, 131073, 3, 1507359, 196609, 3, 1507360, 262145, 3, 1507361, 327681, 3, 1572892, 1, 3, 1572893, 65537, 3, 1572894, 131073, 3, 1572895, 196609, 3, 1572896, 262145, 3, 1572897, 327681, 3, 786466, 1, 3, 786467, 65537, 3, 786468, 131073, 3, 786469, 196609, 3, 786470, 262145, 3, 786471, 327681, 3, 852002, 1, 3, 852003, 65537, 3, 852004, 131073, 3, 852005, 196609, 3, 852006, 262145, 3, 852007, 327681, 3, 917538, 1, 3, 917539, 65537, 3, 917540, 131073, 3, 917541, 196609, 3, 917542, 262145, 3, 917543, 327681, 3, 983074, 1, 3, 983075, 65537, 3, 983076, 131073, 3, 983077, 196609, 3, 983078, 262145, 3, 983079, 327681, 3, 1048610, 1, 3, 1048611, 65537, 3, 1048612, 131073, 3, 1048613, 196609, 3, 1048614, 262145, 3, 1048615, 327681, 3, 1114146, 1, 3, 1114147, 65537, 3, 1114148, 131073, 3, 1114149, 196609, 3, 1114150, 262145, 3, 1114151, 327681, 3, 1179682, 1, 3, 1179683, 65537, 3, 1179684, 131073, 3, 1179685, 196609, 3, 1179686, 262145, 3, 1179687, 327681, 3, 1245218, 1, 3, 1245219, 65537, 3, 1245220, 131073, 3, 1245221, 196609, 3, 1245222, 262145, 3, 1245223, 327681, 3, 1310754, 1, 3, 1310755, 65537, 3, 1310756, 131073, 3, 1310757, 196609, 3, 1310758, 262145, 3, 1310759, 327681, 3, 1376290, 1, 3, 1376291, 65537, 3, 1376292, 131073, 3, 1376293, 196609, 3, 1376294, 262145, 3, 1376295, 327681, 3, 1441826, 1, 3, 1441827, 65537, 3, 1441828, 131073, 3, 1441829, 196609, 3, 1441830, 262145, 3, 1441831, 327681, 3, 1507362, 1, 3, 1507363, 65537, 3, 1507364, 131073, 3, 1507365, 196609, 3, 1507366, 262145, 3, 1507367, 327681, 3, 1572898, 1, 3, 1572899, 65537, 3, 1572900, 131073, 3, 1572901, 196609, 3, 1572902, 262145, 3, 1572903, 327681, 3, 786472, 1, 3, 786473, 65537, 3, 852008, 1, 3, 852009, 65537, 3, 917544, 1, 3, 917545, 65537, 3, 983080, 1, 3, 983081, 65537, 3, 1048616, 1, 3, 1048617, 65537, 3, 1114152, 1, 3, 1114153, 65537, 3, 1179688, 1, 3, 1179689, 65537, 3, 1245224, 1, 3, 1245225, 65537, 3, 1310760, 1, 3, 1310761, 65537, 3, 1376296, 1, 3, 1376297, 65537, 3, 1441832, 1, 3, 1441833, 65537, 3, 1507368, 1, 3, 1507369, 65537, 3, 1572904, 1, 3, 1572905, 65537, 3, -65538, 262145, 0, -65537, 327681, 0, -2, 262145, 0, -1, 327681, 0, 65534, 262145, 0, 65535, 327681, 0, 131070, 262145, 0, 131071, 327681, 0, 196606, 262145, 0, 196607, 327681, 0, 262142, 262145, 0, 262143, 327681, 0, 327678, 262145, 0, 327679, 327681, 0, 393214, 262145, 0, 393215, 327681, 0, 458750, 262145, 0, 458751, 327681, 0, 524286, 262145, 0, 524287, 327681, 0, 589822, 262145, 0, 589823, 327681, 0, -131072, 1, 0, -131071, 65537, 0, -131070, 131073, 0, -131069, 196609, 0, -131068, 262145, 0, -131067, 327681, 0, -65536, 1, 0, -65535, 65537, 0, -65534, 131073, 0, -65533, 196609, 0, -65532, 262145, 0, -65531, 327681, 0, 0, 1, 0, 1, 65537, 0, 2, 131073, 0, 3, 196609, 0, 4, 262145, 0, 5, 327681, 0, 65536, 1, 0, 65537, 65537, 0, 65538, 131073, 0, 65539, 196609, 0, 65540, 262145, 0, 65541, 327681, 0, 131072, 1, 0, 131073, 65537, 0, 131074, 131073, 0, 131075, 196609, 0, 131076, 262145, 0, 131077, 327681, 0, 196608, 1, 0, 196609, 65537, 0, 196610, 131073, 0, 196611, 196609, 0, 196612, 262145, 0, 196613, 327681, 0, 262144, 1, 0, 262145, 65537, 0, 262146, 131073, 0, 262147, 196609, 0, 262148, 262145, 0, 262149, 327681, 0, 327680, 1, 0, 327681, 65537, 0, 327682, 131073, 0, 327683, 196609, 0, 327684, 262145, 0, 327685, 327681, 0, 393216, 1, 0, 393217, 65537, 0, 393218, 131073, 0, 393219, 196609, 0, 393220, 262145, 0, 393221, 327681, 0, 458752, 1, 0, 458753, 65537, 0, 458754, 131073, 0, 458755, 196609, 0, 458756, 262145, 0, 458757, 327681, 0, 524288, 1, 0, 524289, 65537, 0, 524290, 131073, 0, 524291, 196609, 0, 524292, 262145, 0, 524293, 327681, 0, -131066, 1, 0, -131065, 65537, 0, -131064, 131073, 0, -131063, 196609, 0, -131062, 262145, 0, -131061, 327681, 0, -65530, 1, 0, -65529, 65537, 0, -65528, 131073, 0, -65527, 196609, 0, -65526, 262145, 0, -65525, 327681, 0, 6, 1, 0, 7, 65537, 0, 8, 131073, 0, 9, 196609, 0, 10, 262145, 0, 11, 327681, 0, 65542, 1, 0, 65543, 65537, 0, 65544, 131073, 0, 65545, 196609, 0, 65546, 262145, 0, 65547, 327681, 0, 131078, 1, 0, 131079, 65537, 0, 131080, 131073, 0, 131081, 196609, 0, 131082, 262145, 0, 131083, 327681, 0, 196614, 1, 0, 196615, 65537, 0, 196616, 131073, 0, 196617, 196609, 0, 196618, 262145, 0, 196619, 327681, 0, 262150, 1, 0, 262151, 65537, 0, 262152, 131073, 0, 262153, 196609, 0, 262154, 262145, 0, 262155, 327681, 0, 327686, 1, 0, 327687, 65537, 0, 327688, 131073, 0, 327689, 196609, 0, 327690, 262145, 0, 327691, 327681, 0, 393222, 1, 0, 393223, 65537, 0, 393224, 131073, 0, 393225, 196609, 0, 393226, 262145, 0, 393227, 327681, 0, 458758, 1, 0, 458759, 65537, 0, 458760, 131073, 0, 458761, 196609, 0, 458762, 262145, 0, 458763, 327681, 0, 524294, 1, 0, 524295, 65537, 0, 524296, 131073, 0, 524297, 196609, 0, 524298, 262145, 0, 524299, 327681, 0, -131060, 1, 0, -131059, 65537, 0, -131058, 131073, 0, -131057, 196609, 0, -131056, 262145, 0, -131055, 327681, 0, -65524, 1, 0, -65523, 65537, 0, -65522, 131073, 0, -65521, 196609, 0, -65520, 262145, 0, -65519, 327681, 0, 12, 1, 0, 13, 65537, 0, 14, 131073, 0, 15, 196609, 0, 16, 262145, 0, 17, 327681, 0, 65548, 1, 0, 65549, 65537, 0, 65550, 131073, 0, 65551, 196609, 0, 65552, 262145, 0, 65553, 327681, 0, 131084, 1, 0, 131085, 65537, 0, 131086, 131073, 0, 131087, 196609, 0, 131088, 262145, 0, 131089, 327681, 0, 196620, 1, 0, 196621, 65537, 0, 196622, 131073, 0, 196623, 196609, 0, 196624, 262145, 0, 196625, 327681, 0, 262156, 1, 0, 262157, 65537, 0, 262158, 131073, 0, 262159, 196609, 0, 262160, 262145, 0, 262161, 327681, 0, 327692, 1, 0, 327693, 65537, 0, 327694, 131073, 0, 327695, 196609, 0, 327696, 262145, 0, 327697, 327681, 0, 393228, 1, 0, 393229, 65537, 0, 393230, 131073, 0, 393231, 196609, 0, 393232, 262145, 0, 393233, 327681, 0, 458764, 1, 0, 458765, 65537, 0, 458766, 131073, 0, 458767, 196609, 0, 458768, 262145, 0, 458769, 327681, 0, 524300, 1, 0, 524301, 65537, 0, 524302, 131073, 0, 524303, 196609, 0, 524304, 262145, 0, 524305, 327681, 0, -131054, 1, 0, -131053, 65537, 0, -131052, 131073, 0, -131051, 196609, 0, -131050, 262145, 0, -131049, 327681, 0, -65518, 1, 0, -65517, 65537, 0, -65516, 131073, 0, -65515, 196609, 0, -65514, 262145, 0, -65513, 327681, 0, 18, 1, 0, 19, 65537, 0, 20, 131073, 0, 21, 196609, 0, 22, 262145, 0, 23, 327681, 0, 65554, 1, 0, 65555, 65537, 0, 65556, 131073, 0, 65557, 196609, 0, 65558, 262145, 0, 65559, 327681, 0, 131090, 1, 0, 131091, 65537, 0, 131092, 131073, 0, 131093, 196609, 0, 131094, 262145, 0, 131095, 327681, 0, 196626, 1, 0, 196627, 65537, 0, 196628, 131073, 0, 196629, 196609, 0, 196630, 262145, 0, 196631, 327681, 0, 262162, 1, 0, 262163, 65537, 0, 262164, 131073, 0, 262165, 196609, 0, 262166, 262145, 0, 262167, 327681, 0, 327698, 1, 0, 327699, 65537, 0, 327700, 131073, 0, 327701, 196609, 0, 327702, 262145, 0, 327703, 327681, 0, 393234, 1, 0, 393235, 65537, 0, 393236, 131073, 0, 393237, 196609, 0, 393238, 262145, 0, 393239, 327681, 0, 458770, 1, 0, 458771, 65537, 0, 458772, 131073, 0, 458773, 196609, 0, 458774, 262145, 0, 458775, 327681, 0, 524306, 1, 0, 524307, 65537, 0, 524308, 131073, 0, 524309, 196609, 0, 524310, 262145, 0, 524311, 327681, 0, -131048, 1, 0, -131047, 65537, 0, -131046, 131073, 0, -131045, 196609, 0, -131044, 262145, 0, -131043, 327681, 0, -65512, 1, 0, -65511, 65537, 0, -65510, 131073, 0, -65509, 196609, 0, -65508, 262145, 0, -65507, 327681, 0, 24, 1, 0, 25, 65537, 0, 26, 131073, 0, 27, 196609, 0, 28, 262145, 0, 29, 327681, 0, 65560, 1, 0, 65561, 65537, 0, 65562, 131073, 0, 65563, 196609, 0, 65564, 262145, 0, 65565, 327681, 0, 131096, 1, 0, 131097, 65537, 0, 131098, 131073, 0, 131099, 196609, 0, 131100, 262145, 0, 131101, 327681, 0, 196632, 1, 0, 196633, 65537, 0, 196634, 131073, 0, 196635, 196609, 0, 196636, 262145, 0, 196637, 327681, 0, 262168, 1, 0, 262169, 65537, 0, 262170, 131073, 0, 262171, 196609, 0, 262172, 262145, 0, 262173, 327681, 0, 327704, 1, 0, 327705, 65537, 0, 327706, 131073, 0, 327707, 196609, 0, 327708, 262145, 0, 327709, 327681, 0, 393240, 1, 0, 393241, 65537, 0, 393242, 131073, 0, 393243, 196609, 0, 393244, 262145, 0, 393245, 327681, 0, 458776, 1, 0, 458777, 65537, 0, 458778, 131073, 0, 458779, 196609, 0, 458780, 262145, 0, 458781, 327681, 0, 524312, 1, 0, 524313, 65537, 0, 524314, 131073, 0, 524315, 196609, 0, 524316, 262145, 0, 524317, 327681, 0, -131042, 1, 0, -131041, 65537, 0, -131040, 131073, 0, -131039, 196609, 0, -131038, 262145, 0, -131037, 327681, 0, -65506, 1, 0, -65505, 65537, 0, -65504, 131073, 0, -65503, 196609, 0, -65502, 262145, 0, -65501, 327681, 0, 30, 1, 0, 31, 65537, 0, 32, 131073, 0, 33, 196609, 0, 34, 262145, 0, 35, 327681, 0, 65566, 1, 0, 65567, 65537, 0, 65568, 131073, 0, 65569, 196609, 0, 65570, 262145, 0, 65571, 327681, 0, 131102, 1, 0, 131103, 65537, 0, 131104, 131073, 0, 131105, 196609, 0, 131106, 262145, 0, 131107, 327681, 0, 196638, 1, 0, 196639, 65537, 0, 196640, 131073, 0, 196641, 196609, 0, 196642, 262145, 0, 196643, 327681, 0, 262174, 1, 0, 262175, 65537, 0, 262176, 131073, 0, 262177, 196609, 0, 262178, 262145, 0, 262179, 327681, 0, 327710, 1, 0, 327711, 65537, 0, 327712, 131073, 0, 327713, 196609, 0, 327714, 262145, 0, 327715, 327681, 0, 393246, 1, 0, 393247, 65537, 0, 393248, 131073, 0, 393249, 196609, 0, 393250, 262145, 0, 393251, 327681, 0, 458782, 1, 0, 458783, 65537, 0, 458784, 131073, 0, 458785, 196609, 0, 458786, 262145, 0, 458787, 327681, 0, 524318, 1, 0, 524319, 65537, 0, 524320, 131073, 0, 524321, 196609, 0, 524322, 262145, 0, 524323, 327681, 0, -131036, 1, 0, -131035, 65537, 0, -131034, 131073, 0, -131033, 196609, 0, -131032, 262145, 0, -131031, 327681, 0, -65500, 1, 0, -65499, 65537, 0, -65498, 131073, 0, -65497, 196609, 0, -65496, 262145, 0, -65495, 327681, 0, 36, 1, 0, 37, 65537, 0, 38, 131073, 0, 39, 196609, 0, 40, 262145, 0, 41, 327681, 0, 65572, 1, 0, 65573, 65537, 0, 65574, 131073, 0, 65575, 196609, 0, 65576, 262145, 0, 65577, 327681, 0, 131108, 1, 0, 131109, 65537, 0, 131110, 131073, 0, 131111, 196609, 0, 131112, 262145, 0, 131113, 327681, 0, 196644, 1, 0, 196645, 65537, 0, 196646, 131073, 0, 196647, 196609, 0, 196648, 262145, 0, 196649, 327681, 0, 262180, 1, 0, 262181, 65537, 0, 262182, 131073, 0, 262183, 196609, 0, 262184, 262145, 0, 262185, 327681, 0, 327716, 1, 0, 327717, 65537, 0, 327718, 131073, 0, 327719, 196609, 0, 327720, 262145, 0, 327721, 327681, 0, 393252, 1, 0, 393253, 65537, 0, 393254, 131073, 0, 393255, 196609, 0, 393256, 262145, 0, 393257, 327681, 0, 458788, 1, 0, 458789, 65537, 0, 458790, 131073, 0, 458791, 196609, 0, 458792, 262145, 0, 458793, 327681, 0, 524324, 1, 0, 524325, 65537, 0, 524326, 131073, 0, 524327, 196609, 0, 524328, 262145, 0, 524329, 327681, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Size Matters"

[node name="PlayButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_ekdao")]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="LevelSelectButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_ekdao")]
unique_name_in_owner = true
layout_mode = 2
text = "Level Select"

[node name="OptionsButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_ekdao")]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_ekdao")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
